# deltax

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  PERF_IMPROVEMENTS.md  README.md  docker-compose.yml  pg_cocoon.control
.cargo/: config.toml
clickbench/: Makefile  benchmark.sh  parse-results.sh
dev/docs/: BLOB_CACHE.md  COLUMNAR_STORAGE.md  DIRECT_BACKFILL.md  JSON_EXTRACT.md  PARALLEL_AGG.md  PERF_IMPROVEMENTS.md  QUERY_ANALYSIS.md  RTABENCH_QUERY_ANALYSIS.md  rtabench_explain_raw.txt
docker/: Dockerfile.dev  entrypoint.sh
jsonbench/: Makefile  benchmark.sh  parse-results.sh
rtabench/: Makefile  benchmark.sh
rtabench/results/history/20260423_140727_6b86021/: pg_deltax.json
src/: bloom.rs  catalog.rs  compress.rs  copy.rs  copyparquet.rs  copyparse.rs  lib.rs  partition.rs  worker.rs
src/blob_cache/: mod.rs
src/compression/: bitpacked.rs  dictionary.rs
src/functions/: first_last.rs  mod.rs  time_bucket.rs
src/scan/: cost.rs  exec.rs  explain.rs  hook.rs  json_extract.rs  mod.rs  path.rs
src/scan/exec/: agg.rs  agg_wire.rs  batch_qual.rs  count_minmax.rs  datum_utils.rs  decompress.rs  mod.rs  segments.rs  text_col.rs
test-stubs/: Cargo.toml  build.rs  stubs.c
test-stubs/src/: lib.rs
tests/: bench_clickbench.py  bench_clickbench_timescaledb.py  bench_rtabench.py  clickbench_queries.py  conftest.py  rtabench_data.py  test_compression.py  test_functions.py  test_jsonb_extract.py  test_meta_agg.py  test_parallel_scan.py  test_parquet_load.py  test_partitioning.py  test_rtabench_correctness.py  test_worker.py
(+1 files in other folders)
